Structure101 added to sponsors

--- a/index.html
+++ b/index.html
@@ -179,10 +179,15 @@ title: Home
 	
 	<h6 class="section-title">Sponsors</h6>
 	
-	<div class="container clearfix one-half">
+	<div class="container clearfix one-third">
 		<a href="http://www.bbv.ch" target="_blank" ><img src="img/bbv_ag.jpg" /></a>
 	</div><!-- end .container -->
 	
-	<div class="container clearfix last-half">
+	<div class="container clearfix two-third">
 		<a href="http://www.ndepend.com" target="_blank"><img src="img/NDependLogo_PoweredBy.PNG" /></a>
-	</div><!-- end .container -->
+	</div>
+
+	<div class="container clearfix one-third.last">
+		<a href="http://www.structure101.com" target="_blank"><img src="img/Structure101.png" /></a>
+	</div>
+	<!-- end .container -->
