--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ title: Home
 		<a href="http://www.bbv.ch" target="_blank" ><img src="img/bbv_ag.jpg" /></a>
 	</div><!-- end .container -->
 	
-	<div class="container clearfix two-third">
+	<div class="container clearfix one-third">
 		<a href="http://www.ndepend.com" target="_blank"><img src="img/NDependLogo_PoweredBy.PNG" /></a>
 	</div>
 
