--- a/issues.html
+++ b/issues.html
@@ -1,7 +1,7 @@
 ---
 layout: documentation 
 title: Issues 
-teaser: Let's see where accelerate is blocked.
+teaser: Let's see where acceleration is blocked.
 navigation:
 ---
 
