added commandline parser and issues page to navigation

--- a/documentation.html
+++ b/documentation.html
@@ -4,6 +4,8 @@ title: Documentation
 navigation:
    - name: Bootstrapper
      link: bootstrapper.html
+   - name: CommandLineparser
+     link: commandlineParser.html
    - name: Event Broker
      link: eventbroker.html
    - name: Distributed Event Broker
@@ -28,6 +30,8 @@ navigation:
      link: codingguidelines.html
    - name: How to contribute
      link: howtocontribute.html
+   - name: Issues
+     link: issues.html   
    - name: Async (deprecated)
      link: async.html
 ---
