added link to myget gallery

--- a/commandlineparser.html
+++ b/commandlineparser.html
@@ -9,9 +9,11 @@ navigation:
 <h1>Command Line Parser</h1>
 <a href="https://www.nuget.org/packages/Appccelerate.CommandLineParser/">
     <img src="http://img.shields.io/nuget/v/Appccelerate.CommandLineParser.svg" title="latest version" />
+    <img src="http://img.shields.io/nuget/dt/Appccelerate.CommandLineParser.svg" title="number of downloads" />
 </a>
-<img src="http://img.shields.io/nuget/dt/Appccelerate.CommandLineParser.svg" title="number of downloads" />
-<img src="https://img.shields.io/myget/appccelerate/v/Appccelerate.CommandLineParser.svg" title="latest alpha version" />
+<a href="https://www.myget.org/gallery/appccelerate">
+    <img src="https://img.shields.io/myget/appccelerate/v/Appccelerate.CommandLineParser.svg" title="latest alpha version" />
+</a>
 <a href="https://github.com/appccelerate/commandlineparser/issues">
     <img src="https://img.shields.io/github/issues/appccelerate/CommandLineParser.svg" title="open issues" />
 </a>
