updated sponsor logo

--- a/sponsors.html
+++ b/sponsors.html
@@ -12,24 +12,23 @@ title: Sponsors
 
 	</div><!-- end .container -->
 
-	<section id="map">
-		<p class="container">Something went wrong... Try to enable your JavaScript!</p>
-	</section><!-- end #map -->
-
-	<div class="container clearfix one-half">
-			<h3>Contact Info</h3>
-			<p>bbv Software Services AG<br/>
-			Blumenrain 10, 6002 Luzern<br/>
-			Switzerland</p>
-
-				<p>Phone: +41 41 429 01 11<br/>
-				Email: info + at + bbv.ch<br/>
-				Web: <a href="http://www.bbv.ch">bbv.ch</a></p>
-		
-		
+    <div class="container clearfix one-half">
+		<h3>Contact Info</h3>
+        <img src="img/bbv_ag.jpg"/>
+		<p>
+            bbv Software Services AG<br/>
+            Blumenrain 10, 6002 Luzern<br/>
+			Switzerland
+        </p>
+        <p>
+            Phone: +41 41 429 01 11<br/>
+			Email: info + at + bbv.ch<br/>
+			Web: <a href="http://www.bbv.ch">www.bbv.ch</a>
+        </p>
 	</div><!-- end .container -->
 	
 	<div class="container clearfix last-half">
 			<h3>License Sponsors</h3>
-			<p><a href="http://www.ndepend.com"><img src="img/NDependLogo_PoweredBy.PNG"" /></a></p>
+			<p><a href="http://www.ndepend.com"><img src="img/NDependLogo_PoweredBy.PNG"/></a></p>
+            <p><a href="http://www.structure101.com/"><img src="img/Structure101.png"/></a></p>
 	</div><!-- end .container -->
