added link to sensor sample

--- a/documentation.html
+++ b/documentation.html
@@ -75,3 +75,8 @@ We use the following measures for quality assurance:
 <p>
 Please take a look at the documentation of the individual components in the menu above.
 </p>
+
+<h2>Overall Sample</h2>
+<p>
+A sample application showing most of the components in action, can be found at <a href="https://github.com/appccelerate/sensorsample">GitHub - Sensor Sample (master branch)</a>.
+</p>
