added badges to all component document pages

--- a/bootstrapper.html
+++ b/bootstrapper.html
@@ -18,6 +18,18 @@ navigation:
    - name: Specifications
      link: bootstrapperspecifications.html		 
 ---
+<h1>Bootstrapper</h1>
+<a href="https://www.nuget.org/packages/Appccelerate.Bootstrapper/">
+    <img src="http://img.shields.io/nuget/v/Appccelerate.Bootstrapper.svg" title="latest version" />
+    <img src="http://img.shields.io/nuget/dt/Appccelerate.Bootstrapper.svg" title="number of downloads" />
+</a>
+<a href="https://www.myget.org/gallery/appccelerate">
+    <img src="https://img.shields.io/myget/appccelerate/v/Appccelerate.Bootstrapper.svg" title="latest alpha version" />
+</a>
+<a href="https://github.com/appccelerate/bootstrapper/issues">
+    <img src="https://img.shields.io/github/issues/appccelerate/Bootstrapper.svg" title="open issues" />
+</a>
+
 <h2>Motivation</h2>
 <p>
 Every application goes through start up and shutdown phases. Everything starts really simple. Unfortunately self-made solutions quickly hit the wall due to ever changing business requirements. As a consequence, more services and components need to be introduced into the startup and shutdown mechanism during the software life cycle. The bootstrapper provides you an approved and extendable mechanism for bootstrapping. Put your application and acceptance tests on appcceleration!
