--- a/checkhintpathtask.html
+++ b/checkhintpathtask.html
@@ -9,6 +9,17 @@ navigation:
      link: checkhintpathtask.html
 ---
 <h1>Check Hint Path Task</h1>
+<a href="https://www.nuget.org/packages/Appccelerate.CheckHintPathTask/">
+    <img src="http://img.shields.io/nuget/v/Appccelerate.CheckHintPathTask.svg" title="latest version" />
+    <img src="http://img.shields.io/nuget/dt/Appccelerate.CheckHintPathTask.svg" title="number of downloads" />
+</a>
+<a href="https://www.myget.org/gallery/appccelerate">
+    <img src="https://img.shields.io/myget/appccelerate/v/Appccelerate.CheckHintPathTask.svg" title="latest alpha version" />
+</a>
+<a href="https://github.com/appccelerate/checkhintpathtask/issues">
+    <img src="https://img.shields.io/github/issues/appccelerate/CheckHintPathTask.svg" title="open issues" />
+</a>
+
 <h2>Motivation</h2>
 <p>
 Visual Studio uses hint paths to locate referenced assemblies.
