--- a/checknobindingredirectstask.html
+++ b/checknobindingredirectstask.html
@@ -9,6 +9,17 @@ navigation:
      link: checknobindingredirectstask.html
 ---
 <h1>Check No Binding Redirects Task</h1>
+<a href="https://www.nuget.org/packages/Appccelerate.CheckNoBindingRedirectsTask/">
+    <img src="http://img.shields.io/nuget/v/Appccelerate.CheckNoBindingRedirectsTask.svg" title="latest version" />
+    <img src="http://img.shields.io/nuget/dt/Appccelerate.CheckNoBindingRedirectsTask.svg" title="number of downloads" />
+</a>
+<a href="https://www.myget.org/gallery/appccelerate">
+    <img src="https://img.shields.io/myget/appccelerate/v/Appccelerate.CheckNoBindingRedirectsTask.svg" title="latest alpha version" />
+</a>
+<a href="https://github.com/appccelerate/checknobindingredirectstask/issues">
+    <img src="https://img.shields.io/github/issues/appccelerate/CheckNoBindingRedirectsTask.svg" title="open issues" />
+</a>
+
 <h2>Motivation</h2>
 <p>
 Nuget adds binding redirects for updated assemblies to a project under certain conditions.
