--- a/checknugetdependenciestask.html
+++ b/checknugetdependenciestask.html
@@ -9,6 +9,17 @@ navigation:
      link: checknugetdependenciestask.html
 ---
 <h1>Check Nuget Dependencies Task</h1>
+<a href="https://www.nuget.org/packages/Appccelerate.CheckNugetDependenciesTask/">
+    <img src="http://img.shields.io/nuget/v/Appccelerate.CheckNugetDependenciesTask.svg" title="latest version" />
+    <img src="http://img.shields.io/nuget/dt/Appccelerate.CheckNugetDependenciesTask.svg" title="number of downloads" />
+</a>
+<a href="https://www.myget.org/gallery/appccelerate">
+    <img src="https://img.shields.io/myget/appccelerate/v/Appccelerate.CheckNugetDependenciesTask.svg" title="latest alpha version" />
+</a>
+<a href="https://github.com/appccelerate/checknugetdependenciestask/issues">
+    <img src="https://img.shields.io/github/issues/appccelerate/CheckNugetDependenciesTask.svg" title="open issues" />
+</a>
+
 <h2>Motivation</h2>
 <p>
 </p>
