--- a/distributedeventbroker.html
+++ b/distributedeventbroker.html
@@ -10,10 +10,22 @@ navigation:
    - name: Scoping &amp; Identification
      link: distributedeventbrokerscoping.html	 	
    - name: Customization
-     link: distributedeventbrokercustomization.html	 	 
+     link: distributedeventbrokercustomization.html
    - name: Restrictions
      link: distributedeventbrokerrestrictions.html	 		 
 ---
+<h1>Distributed Event Broker</h1>
+<a href="https://www.nuget.org/packages/Appccelerate.DistributedEventBroker/">
+    <img src="http://img.shields.io/nuget/v/Appccelerate.DistributedEventBroker.svg" title="latest version" />
+    <img src="http://img.shields.io/nuget/dt/Appccelerate.DistributedEventBroker.svg" title="number of downloads" />
+</a>
+<a href="https://www.myget.org/gallery/appccelerate">
+    <img src="https://img.shields.io/myget/appccelerate/v/Appccelerate.DistributedEventBroker.svg" title="latest alpha version" />
+</a>
+<a href="https://github.com/appccelerate/distributedeventbroker/issues">
+    <img src="https://img.shields.io/github/issues/appccelerate/DistributedEventBroker.svg" title="open issues" />
+</a>
+
 <h2>Motivation</h2>
 Keeping your users up to date is a huge challenge in a distributed application. Polling is resource intensive and does not scale well. Nonetheless the large part of applications nowadays periodically polls data. But there is a more elegant solution. Scale your application over process boundaries with the distributed event broker.
 <h2>Features</h2>
