--- a/evaluationengine.html
+++ b/evaluationengine.html
@@ -26,6 +26,18 @@ navigation:
    - name: Specifications
      link: evaluationenginespecifications.html		 
 ---
+<h1>Evaluation Engine</h1>
+<a href="https://www.nuget.org/packages/Appccelerate.EvaluationEngine/">
+    <img src="http://img.shields.io/nuget/v/Appccelerate.EvaluationEngine.svg" title="latest version" />
+    <img src="http://img.shields.io/nuget/dt/Appccelerate.EvaluationEngine.svg" title="number of downloads" />
+</a>
+<a href="https://www.myget.org/gallery/appccelerate">
+    <img src="https://img.shields.io/myget/appccelerate/v/Appccelerate.EvaluationEngine.svg" title="latest alpha version" />
+</a>
+<a href="https://github.com/appccelerate/evaluationengine/issues">
+    <img src="https://img.shields.io/github/issues/appccelerate/EvaluationEngine.svg" title="open issues" />
+</a>
+
 <h2>Motivation</h2>
 <p>
 In many applications, the program flow depends on a lot of decisions whether some condition is met or not.
