--- a/eventbroker.html
+++ b/eventbroker.html
@@ -34,6 +34,18 @@ navigation:
    - name: Specifications
      link: eventbrokerspecifications.html		 
 ---
+<h1>Event Broker</h1>
+<a href="https://www.nuget.org/packages/Appccelerate.EventBroker/">
+    <img src="http://img.shields.io/nuget/v/Appccelerate.EventBroker.svg" title="latest version" />
+    <img src="http://img.shields.io/nuget/dt/Appccelerate.EventBroker.svg" title="number of downloads" />
+</a>
+<a href="https://www.myget.org/gallery/appccelerate">
+    <img src="https://img.shields.io/myget/appccelerate/v/Appccelerate.EventBroker.svg" title="latest alpha version" />
+</a>
+<a href="https://github.com/appccelerate/eventbroker/issues">
+    <img src="https://img.shields.io/github/issues/appccelerate/EventBroker.svg" title="open issues" />
+</a>
+
 <h2>Motivation</h2>
 <p>
 Using .net events throughout the application brings along some problems. 
