--- a/io.html
+++ b/io.html
@@ -13,6 +13,17 @@ navigation:
      link: iotemporaryfileholder.html
 ---
 <h1>IO</h1>
+<a href="https://www.nuget.org/packages/Appccelerate.IO/">
+    <img src="http://img.shields.io/nuget/v/Appccelerate.IO.svg" title="latest version" />
+    <img src="http://img.shields.io/nuget/dt/Appccelerate.IO.svg" title="number of downloads" />
+</a>
+<a href="https://www.myget.org/gallery/appccelerate">
+    <img src="https://img.shields.io/myget/appccelerate/v/Appccelerate.IO.svg" title="latest alpha version" />
+</a>
+<a href="https://github.com/appccelerate/io/issues">
+    <img src="https://img.shields.io/github/issues/appccelerate/IO.svg" title="open issues" />
+</a>
+
 <p>
 Appccelerate.IO provides helpers for easier interaction with file system, resources etc.
 </p>
