--- a/mappingeventbroker.html
+++ b/mappingeventbroker.html
@@ -10,10 +10,22 @@ navigation:
    - name: Conventions
      link: mappingeventbrokerconventions.html	 	
    - name: Providers
-     link: mappingeventbrokerproviders.html	 	 
+     link: mappingeventbrokerproviders.html
    - name: Restrictions
      link: mappingeventbrokerrestrictions.html	 		 
 ---
+<h1>Mapping Event Broker</h1>
+<a href="https://www.nuget.org/packages/Appccelerate.MappingEventBroker/">
+    <img src="http://img.shields.io/nuget/v/Appccelerate.MappingEventBroker.svg" title="latest version" />
+    <img src="http://img.shields.io/nuget/dt/Appccelerate.MappingEventBroker.svg" title="number of downloads" />
+</a>
+<a href="https://www.myget.org/gallery/appccelerate">
+    <img src="https://img.shields.io/myget/appccelerate/v/Appccelerate.MappingEventBroker.svg" title="latest alpha version" />
+</a>
+<a href="https://github.com/appccelerate/mappingeventbroker/issues">
+    <img src="https://img.shields.io/github/issues/appccelerate/MappingEventBroker.svg" title="open issues" />
+</a>
+
 <h2>Motivation</h2>
 <p>Normally with the event broker the source and the destination event argument type must match exactly. With the mapping event broker you get the possibility to remap event arguments from the source to the destination.</p>
 <h2>Features</h2>
