--- a/statemachine.html
+++ b/statemachine.html
@@ -36,6 +36,18 @@ navigation:
    - name: Specifications
      link: statemachinespecifications.html
 ---
+<h1>State Machine</h1>
+<a href="https://www.nuget.org/packages/Appccelerate.StateMachine/">
+    <img src="http://img.shields.io/nuget/v/Appccelerate.StateMachine.svg" title="latest version" />
+    <img src="http://img.shields.io/nuget/dt/Appccelerate.StateMachine.svg" title="number of downloads" />
+</a>
+<a href="https://www.myget.org/gallery/appccelerate">
+    <img src="https://img.shields.io/myget/appccelerate/v/Appccelerate.StateMachine.svg" title="latest alpha version" />
+</a>
+<a href="https://github.com/appccelerate/statemachine/issues">
+    <img src="https://img.shields.io/github/issues/appccelerate/StateMachine.svg" title="open issues" />
+</a>
+
 <h2>Motivation</h2>
 <p>
 Our applications are full of state machines. Enabled and disabled UI elements, abstractions of devices and business logic.
