--- a/version.html
+++ b/version.html
@@ -7,6 +7,17 @@ navigation:
      link: version.html
 ---
 <h1>Version Task and Executable</h1>
+<a href="http://www.nuget.org/packages?q=appccelerate.version">
+    <img src="http://img.shields.io/nuget/v/Appccelerate.Version.svg" title="latest version" />
+    <img src="http://img.shields.io/nuget/dt/Appccelerate.Version.svg" title="number of downloads" />
+</a>
+<a href="https://www.myget.org/gallery/appccelerate">
+    <img src="https://img.shields.io/myget/appccelerate/v/Appccelerate.Version.svg" title="latest alpha version" />
+</a>
+<a href="https://github.com/appccelerate/version/issues">
+    <img src="https://img.shields.io/github/issues/appccelerate/Version.svg" title="open issues" />
+</a>
+
 <h2>Motivation</h2>
 <p>
 Manual versioning of assemblies is tedious and error-prone. Especially in a continuous deployment environment, versions have to be calculated automatically and environment agnostic.
