added prerequisite of commandlets

--- a/howtocontributecommandlets.html
+++ b/howtocontributecommandlets.html
@@ -32,6 +32,10 @@ See <a href="howtocontributeconcepts.html#multirepo">Multi repository</a>.
 Execute the <code>Appccelerate.ps1</code> script from the scripts repository.
 This will import the commandlets into the current PowerShell shell.
 </p>
+<h3>Prerequisite</h3>
+<p>
+The commandlets use nuget.exe and git.exe to run. Both must be installed and added to the Path environment variable.
+</p>
 
 <h2>Git related commandlets</h2>
 
