--- a/statemachine.html
+++ b/statemachine.html
@@ -9,6 +9,8 @@ navigation:
      link: statemachinetutorial.html	
    - name: Passive State Machine
      link: statemachinepassivestatemachine.html
+   - name: Async Passive State Machine
+     link: statemachineasyncpassivestatemachine.html
    - name: Active State Machine
      link: statemachineactivestatemachine.html
    - name: Actions
@@ -41,9 +43,9 @@ navigation:
     <img src="http://img.shields.io/nuget/v/Appccelerate.StateMachine.svg" title="latest version" />
     <img src="http://img.shields.io/nuget/dt/Appccelerate.StateMachine.svg" title="number of downloads" />
 </a>
-<a href="https://www.myget.org/gallery/appccelerate">
+<!--<a href="https://www.myget.org/gallery/appccelerate">
     <img src="https://img.shields.io/myget/appccelerate/v/Appccelerate.StateMachine.svg" title="latest alpha version" />
-</a>
+</a>-->
 <a href="https://github.com/appccelerate/statemachine/issues">
     <img src="https://img.shields.io/github/issues/appccelerate/StateMachine.svg" title="open issues" />
 </a>
@@ -56,6 +58,14 @@ Therefore, we implemented a state machine component that allows implementing a s
 This reduces complexity and needed effort dramatically. See for yourself.
 </p>
 
+<h2>Highlights</h2>
+<p>
+    <b>async/await support</b>: from version 4.0.0 on, the state machine supports async/await
+</p>
+<p>
+    <b>.net standard</b>: from version 4.0.0 on, the state machine targets .net standard 1.3
+</p>
+
 <h2>Features</h2>
 <p>
     <ul class="check dotted">
@@ -63,6 +73,7 @@ This reduces complexity and needed effort dramatically. See for yourself.
         <li>transition, entry and exit actions.</li>
         <li>transition guards</li>
         <li>hierarchical states with history behavior to initialize state always to same state or last active state.</li>
+        <li>supports async/await</li>
         <li>fluent definition syntax.</li>
         <li>passive state machine handles state transitions synchronously.</li>
         <li>active state machine handles state transitions asynchronously on the worker thread of the state machine.</li>
