--- a/statemachineasyncpassivestatemachine.html
+++ b/statemachineasyncpassivestatemachine.html
@@ -38,25 +38,22 @@ navigation:
    - name: Specifications
      link: statemachinespecifications.html
 ---
-<h2>Active State Machine</h2>
+<h2>Async Passive State Machine</h2>
 
 <p>
-The <code>ActiveStateMachine</code> is a state machine that has its own worker thread on which the transitions are performed. 
-The program flow returns to the caller of the state machine immediately after the event was queued by a call to <code>Fire</code>.
+The <code>AsyncPassiveStateMachine</code> is a state machine that supports async/await for transition actions, entry/exit actions, guards and save/load.
+Like the <code>PassiveStatemachine</code> it performs transitions on the same thread as the code calling the state machine. 
+That means that when the call to <code>Fire</code> returns to the caller and the returned task is awaited then the transition is performed.
 </p>
-
 
 <h3>State Machine Events Execution</h3>
 <p>
-The state machine executes the events on its worker thread.
+All events fired onto the state machine are executed on the same async/await chain as the caller.
 </p>
 
-
-<h3>Actions Queueing Events</h3>
+<h3>Actions queueing events</h3>
 <p>
-When an action fires an event onto the state machine then this event is queued and the action continues.
-Note that other threads may add events themselves. 
-There is no guarantee that the event fired by the action is the next event actually executed.
+When a transition, exit or entry action fires an event onto the state machine then this event is executed immediately after the initial event is processed and before task returned by <code>Fire</code> is completed.
 </p>
 
 
