--- a/statemachinesample.html
+++ b/statemachinesample.html
@@ -9,6 +9,8 @@ navigation:
      link: statemachinetutorial.html	
    - name: Passive State Machine
      link: statemachinepassivestatemachine.html
+   - name: Async Passive State Machine
+     link: statemachineasyncpassivestatemachine.html
    - name: Active State Machine
      link: statemachineactivestatemachine.html
    - name: Actions
