--- a/roadmap.html
+++ b/roadmap.html
@@ -11,11 +11,6 @@ The main input for Appcceleration is the feedback from the real world projects w
 <p>
 These are the features we're up to in the future:
 <ul>
-  <li>Support for additional platforms (PCL)</li>
-  <li>Bootstrapper: client/server extension support</li>
-  <li>Bootstrapper: serviceinstaller</li>
-  <li>Bootstrapper: console argument support</li>
-  <li>Feature, license and user permission management over the evaluation engine</li>
-  <li>UI navigation for WPF and Web (URL based)</li>
+  <li>Create state machines from a pre-defined definition so that creation time can be reduced in scenarios like in web backends</li>
 </ul>
 </p>
