removed carousel with old components from index

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ title: Home
 		
 	</div><!-- end .one-half.last -->
 	
-	<h6 class="section-title">Appccelerators</h6>
+	<!--<h6 class="section-title">Appccelerators</h6>
 
 	<ul class="projects-carousel clearfix">
 
@@ -158,7 +158,8 @@ title: Home
 			</a>
 		</li>
 
-	</ul><!-- end .projects-carousel -->
+	</ul>-->
+	<!-- end .projects-carousel -->
 	
 	<h6 class="section-title">Discuss with us</h6>
 	
