added state machine specs as markdown file (trial)

--- a/statemachine.html
+++ b/statemachine.html
@@ -36,7 +36,7 @@ navigation:
    - name: Complete State Machine Sample
      link: statemachinesample.html
    - name: Specifications
-     link: statemachinespecifications.html
+     link: statemachine.specs.md
 ---
 <h1>State Machine</h1>
 <a href="https://www.nuget.org/packages/Appccelerate.StateMachine/">
