linked to state machien specification file directly on GitHub.

--- a/statemachine.html
+++ b/statemachine.html
@@ -36,7 +36,7 @@ navigation:
    - name: Complete State Machine Sample
      link: statemachinesample.html
    - name: Specifications
-     link: statemachine.specs.md
+     link: https://github.com/appccelerate/appccelerate.github.com/blob/master/statemachine.specs.md
 ---
 <h1>State Machine</h1>
 <a href="https://www.nuget.org/packages/Appccelerate.StateMachine/">
