--- a/statemachinepersistence.html
+++ b/statemachinepersistence.html
@@ -36,7 +36,7 @@ navigation:
    - name: Complete State Machine Sample
      link: statemachinesample.html
    - name: Specifications
-     link: statemachinespecifications.html
+     link: https://github.com/appccelerate/appccelerate.github.com/blob/master/statemachine.specs.md
 ---
 <h2>Persistence</h2>
 <p>
