--- a/statemachineasyncpassivestatemachine.html
+++ b/statemachineasyncpassivestatemachine.html
@@ -36,7 +36,7 @@ navigation:
    - name: Complete State Machine Sample
      link: statemachinesample.html
    - name: Specifications
-     link: statemachinespecifications.html
+     link: https://github.com/appccelerate/appccelerate.github.com/blob/master/statemachine.specs.md
 ---
 <h2>Async Passive State Machine</h2>
 
